# literature_review_tool

./: .gitignore  PIPELINE.md  README.md  example_seeds.csv  lit_review_system_design.md  pyproject.toml  requirements.txt
lit_review/: __init__.py  cli.py  config.py  db.py  models.py  utils.py
lit_review/llm/: client.py  prompts.py  schemas.py
lit_review/pipeline/: __init__.py  dedupe.py  export.py  harvest.py  ingest.py  resolve.py  saturation.py  score.py  screen.py  snowball.py
lit_review/sources/: __init__.py  arxiv.py  crossref.py  openalex.py  semantic_scholar.py
lit_review/ui/: app.py
lit_review/ui/static/: app.js  style.css
lit_review/ui/templates/: index.html
tests/: __init__.py  conftest.py  test_criteria_consistency.py  test_pipeline.py  test_source_toggles.py  test_ui.py
